--- a/concepts/autopilot.mdx
+++ b/concepts/autopilot.mdx
@@ -45,7 +45,7 @@ const appConfig = {
         systemTemplate: "You are a Customer Service Representative. You are here to help the caller with their needs.",
         goodbyeMessage: "Goodbye, have a great day!",
         systemErrorMessage: "I'm sorry, I didn't understand that. Can you please repeat it?",
-        "idleOptions": {
+        idleOptions: {
           "message": "Are you still there?"
         }
       },
