Documentation edits made through Mintlify web editor

--- a/concepts/autopilot.mdx
+++ b/concepts/autopilot.mdx
@@ -82,7 +82,7 @@ Currently, only *Deepgram* is supported as a speech-to-text vendor, but we are w
 
 ### Deepgram configuration
 
-Deepgram is a speech-to-text vendor that provides high-quality transcription services. Deepgram supports the _languageCode_ as well as _model_ properties. The _languageCode_ property is the language code of the speech you want to transcribe. The _model_ property is the model to use for transcription and defaults to `nova-2-phonecall`.
+_Deepgram_ is a speech-to-text vendor that provides high-quality transcription services. Deepgram supports the _languageCode_ as well as _model_ properties. The _languageCode_ property is the language code of the speech you want to transcribe. The _model_ property is the model to use for transcription and defaults to `nova-2-phonecall`.
 
 The Autopilot supports the models `nova-2`, `nova-2-phonecall`, and `nova-2-conversationalai`.
 
@@ -119,7 +119,7 @@ Most vendors only support the _voice_ property, which is the voice to use for th
 Please visit the vendor's documentation for more information on the available voices.
 
 <Tip>
-  In addition to the *voice* property, the *ElevenLabs* vendor supports the *model* property. The *model* property is the model to use for text-to-speech and defaults to `tts-1`.
+  In addition to the *voice* property, the _ElevenLabs_ vendor supports the *model* property. The *model* property is the model to use for text-to-speech and defaults to `eleven_flash_v2_5`.
   Please refer to the [ElevenLabs documentation](https://elevenlabs.io/docs/developer-guides/models) for additional information about the available models.
 </Tip>
 
