Documentation edits made through Mintlify web editor

--- a/concepts/autopilot.mdx
+++ b/concepts/autopilot.mdx
@@ -66,9 +66,9 @@ client.loginWithApiKey("AP0eerv2g7qow3e950k7twu4rvydcunq3k", "fNc...")
 
 ## General configuration
 
-The Autopilot configuration is divided into a general section and three sub-sections: _*speechToText*_, _*textToSpeech*_, and _*intelligence*_.
+The Autopilot configuration is divided into a general section and three sub-sections: _speechToText_, _textToSpeech_, and _intelligence_.
 
-The general section contains *name*, *type*, and *endpoint* properties.
+The general section contains _name_, _type_, and _endpoint_ properties.
 
 The _name_ property is the name of the Autopilot application. The _type_ property is the type of the application, which should always be set to `AUTOPILOT`. The _endpoint_ is an optional property allowing you to specify the endpoint for self-hosted Autopilots.
 
