Documentation edits made through Mintlify web editor

--- a/concepts/autopilot.mdx
+++ b/concepts/autopilot.mdx
@@ -132,7 +132,7 @@ const appConfig = {
     productRef: "tts.elevenlabs",
     config: {
       voice: "CaJslL1xziwefCeTNzHv",
-      mode: "eleven_flash_v2_5"
+      model: "eleven_flash_v2_5"
     }
   },
   ...
