Documentation edits made through Mintlify web editor

--- a/concepts/autopilot.mdx
+++ b/concepts/autopilot.mdx
@@ -250,7 +250,7 @@ Fonoster's Autopilot allows you to use tools to enhance the conversational exper
 
 ### Built-in tools
 
-The following is a list of built-in tools:
+The following is a list of built-in tools available for an agent:
 
 | Tool     | Description                                  |
 | -------- | -------------------------------------------- |
